--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Nanpa AI プライバシーポリシー</h1>
+        <h1>ナンパ AI プライバシーポリシー</h1>
         <p class="last-updated"><strong>最終更新日：2025年08月16日</strong></p>
         
         <div class="section">
