--- a/disclosure.html
+++ b/disclosure.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>特定商取引法に基づく表記 | Nanpa AI</title>
+    <title>特定商取引法に基づく表記 | ナンパ AI</title>
     <style>
         body { font-family: Arial, sans-serif; line-height: 1.8; max-width: 800px; margin: 0 auto; padding: 20px; }
         h1 { color: #2c3e50; border-bottom: 2px solid #eee; padding-bottom: 10px; }
@@ -16,15 +16,15 @@
     
     <div class="section">
         <h2>事業者情報</h2>
-        <p><strong>事業者名:</strong> Xzentient </p>
+        <p><strong>事業者名:</strong> Xzentient</p>
         <p><strong>所在地:</strong> 〒132-0033 東京都江戸川区東葛西1-12-1</p>
-        <p><strong>代表者:</strong> Samantha Sugathadasa</p>
+        <p><strong>代表者:</strong> Rasika Sugathadasa</p>
         <p><strong>連絡先:</strong> xzentient@gmail.com / TEL:08097185080</p>
     </div>
 
     <div class="section">
         <h2>販売価格</h2>
-        <p>アプリ内課金の価格は各商品ページに表示されます。消費税は価格に含まれます。</p>
+        <p>週額750円（税込）。アプリ内にて表示されます。</p>
     </div>
 
     <div class="section">
@@ -34,12 +34,12 @@
 
     <div class="section">
         <h2>商品の引渡し時期</h2>
-        <p>デジタルコンテンツは決済完了後即時利用可能となります。</p>
+        <p>デジタルコンテンツは決済完了後、即時ご利用いただけます。</p>
     </div>
 
     <div class="section">
         <h2>返品・キャンセル</h2>
-        <p>デジタル商品の性質上、返品・キャンセルは承れません（<a href="https://www.no-trouble.caa.go.jp/rule/shouhi/yougo/08.html" target="_blank">特定商取引法第9条</a>に基づく）。</p>
+        <p>デジタル商品の性質上、返品・キャンセルは承っておりません（<a href="https://www.no-trouble.caa.go.jp/rule/shouhi/yougo/08.html" target="_blank">特定商取引法第9条</a>に基づく）。</p>
     </div>
 
     <div class="section">
@@ -49,8 +49,13 @@
 
     <div class="section">
         <h2>その他</h2>
-        <p><strong>価格以外の費用:</strong> 通信料はお客様負担</p>
-        <p><strong>ソフトウェアライセンス:</strong> 利用規約に準じます</p>
+        <p><strong>価格以外の費用:</strong> 通信料はお客様のご負担となります。</p>
+        <p><strong>ソフトウェアライセンス:</strong> 利用規約に準じます。</p>
+    </div>
+
+    <div class="section">
+        <h2>提供するサービスについて</h2>
+        <p>「ナンパ AI」は、AIを活用してユーザーの恋愛・出会いにおけるコミュニケーションをサポートするモバイルアプリです。会話のスクリーンショットをアップロードすることで、AIが適切な返信文を提案したり、効果的な「口説き文句」やアドバイスを提供します。ユーザーは週額課金により、これらのサービスを利用できます。</p>
     </div>
 
     <p><a href="https://appssamurai.github.io/app.html#">← アプリに戻る</a></p>
