--- a/disclosure.html
+++ b/disclosure.html
@@ -1,63 +1,87 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>特定商取引法に基づく表記 | ナンパ AI</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.8; max-width: 800px; margin: 0 auto; padding: 20px; }
-        h1 { color: #2c3e50; border-bottom: 2px solid #eee; padding-bottom: 10px; }
-        h2 { color: #3498db; margin-top: 30px; }
-        .section { margin-bottom: 25px; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>特定商取引法に基づく表記 | ナンパ AI</title>
+  <style>
+    body { font-family: Arial, sans-serif; line-height: 1.8; max-width: 800px; margin: 0 auto; padding: 20px; }
+    h1 { color: #2c3e50; border-bottom: 2px solid #eee; padding-bottom: 10px; }
+    h2 { color: #3498db; margin-top: 30px; }
+    .section { margin-bottom: 25px; }
+  </style>
 </head>
 <body>
-    <h1>特定商取引法に基づく表記</h1>
-    
-    <div class="section">
-        <h2>事業者情報</h2>
-        <p><strong>事業者名:</strong> Xzentient</p>
-        <p><strong>所在地:</strong> 〒132-0033 東京都江戸川区東葛西1-12-1</p>
-        <p><strong>代表者:</strong> Rasika Sugathadasa</p>
-        <p><strong>連絡先:</strong> xzentient@gmail.com / TEL:08097185080</p>
-    </div>
+  <h1>特定商取引法に基づく表記</h1>
 
-    <div class="section">
-        <h2>販売価格</h2>
-        <p>週額750円（税込）。アプリ内にて表示されます。</p>
-    </div>
+  <div class="section">
+    <h2>事業者名（屋号）</h2>
+    <p><strong>氏名:</strong> Rasika Sugathadasa（個人事業主）</p>
+    <p><strong>屋号:</strong> Xzentient</p>
+  </div>
 
-    <div class="section">
-        <h2>お支払い方法</h2>
-        <p>クレジットカード決済（Stripe経由）</p>
-    </div>
+  <div class="section">
+    <h2>所在地</h2>
+    <p>132-0033, Edogawa, Tokyo, Japan</p>
+  </div>
 
-    <div class="section">
-        <h2>商品の引渡し時期</h2>
-        <p>デジタルコンテンツは決済完了後、即時ご利用いただけます。</p>
-    </div>
+  <div class="section">
+    <h2>電話番号</h2>
+    <p>08097185080。</p>
+    <p>対応時間: 平日 10:00～18:00（土日祝日除く）</p>
+  </div>
 
-    <div class="section">
-        <h2>返品・キャンセル</h2>
-        <p>デジタル商品の性質上、返品・キャンセルは承っておりません（<a href="https://www.no-trouble.caa.go.jp/rule/shouhi/yougo/08.html" target="_blank">特定商取引法第9条</a>に基づく）。</p>
-    </div>
+  <div class="section">
+    <h2>メールアドレス</h2>
+    <p>xzentient@gmail.com</p>
+  </div>
 
-    <div class="section">
-        <h2>動作環境</h2>
-        <p>iOS 12以上 / Android 8以上</p>
-    </div>
+  <div class="section">
+    <h2>運営責任者</h2>
+    <p>Rasika Sugathadasa</p>
+  </div>
 
-    <div class="section">
-        <h2>その他</h2>
-        <p><strong>価格以外の費用:</strong> 通信料はお客様のご負担となります。</p>
-        <p><strong>ソフトウェアライセンス:</strong> 利用規約に準じます。</p>
-    </div>
+  <div class="section">
+    <h2>販売価格</h2>
+    <p>週額750円（税込）。アプリ内にて表示されます。</p>
+  </div>
 
-    <div class="section">
-        <h2>提供するサービスについて</h2>
-        <p>「ナンパ AI」は、AIを活用してユーザーの恋愛・出会いにおけるコミュニケーションをサポートするモバイルアプリです。会話のスクリーンショットをアップロードすることで、AIが適切な返信文を提案したり、効果的な「口説き文句」やアドバイスを提供します。ユーザーは週額課金により、これらのサービスを利用できます。</p>
-    </div>
+  <div class="section">
+    <h2>商品以外の必要料金</h2>
+    <p>インターネット接続にかかる通信費用はお客様のご負担となります。</p>
+  </div>
 
-    <p><a href="https://appssamurai.github.io/app.html#">← アプリに戻る</a></p>
+  <div class="section">
+    <h2>支払方法</h2>
+    <p>クレジットカード決済（Stripe経由）</p>
+  </div>
+
+  <div class="section">
+    <h2>支払時期</h2>
+    <p>クレジットカード決済：購入時に即時処理されます。</p>
+  </div>
+
+  <div class="section">
+    <h2>商品の引渡時期</h2>
+    <p>デジタルコンテンツは決済完了後、即時ご利用いただけます。</p>
+  </div>
+
+  <div class="section">
+    <h2>返品・キャンセルについて</h2>
+    <p><strong>お客様都合による返品・キャンセル:</strong><br>デジタル商品の性質上、返品・キャンセルは承っておりません。</p>
+    <p><strong>不良品・サービス不備による対応:</strong><br>不具合がある場合は、xzentient@gmail.com までご連絡ください。返金または同等のサービスをご提供いたします。</p>
+  </div>
+
+  <div class="section">
+    <h2>動作環境</h2>
+    <p>iOS 12以上 / Android 8以上</p>
+  </div>
+
+  <div class="section">
+    <h2>提供するサービス内容</h2>
+    <p>「ナンパ AI」は、AIを活用してユーザーの恋愛・出会いにおけるコミュニケーションをサポートするモバイルアプリです。会話のスクリーンショットをアップロードすることで、AIが適切な返信文を提案したり、効果的な「口説き文句」やアドバイスを提供します。週額課金でサービスを利用可能です。</p>
+  </div>
+
+  <p><a href="https://appssamurai.github.io/app.html#">← アプリに戻る</a></p>
 </body>
 </html>
